<resources>
    <string name="app_name">SMS Scheduler</string>
    <string name="request_permissions">Request permissions</string>
    <string name="send_sms_button">Schedule SMS</string>
    <string name="name_surname_default">Name Surname</string>
    <string name="number_default">Number</string>
    <string name="message_to_schedule_hint">Your message</string>
    <string name="datetime_default_seconds">60 (seconds)</string>
    <string name="datetime_default_minutes">2 (minutes)</string>
    <string name="save_button">Save</string>
    <string name="message_successfully_scheduled">Your message is successfully scheduled!</string>
    <string name="wont_be_using_program_without_granting_permissions">You won\'t be able to use this program without granting permissions!</string>
    <string name="this_app_wont_work_without_granting_permissions">"This app won't work without granting permissions. Please request permission grant again."</string>
    <string name="hey_there">Hey there!</string>
    <string name="what_you_will_be_using_while_delaying_messages_question">What you will be using while delaying messages?</string>
    <string name="about">About</string>
    <string name="about_text">Here will be some ABOUT (or INFO) text</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="delay_time">Delay time</string>
    <string name="date">Date</string>
    <string name="permissions_not_set">Permissions are not set!</string>
    <string name="permissions_not_set_body">In order to use this application you need to grant two types of permissions. One is to read contacts and the other one is to send SMS to your contacts. Without granting these this application won\'t be able to properly! Please go back to settings and request permissions again!</string>
    <string name="history_is_empty">Your history is empty!</string>
    <string name="history_is_empty_body">Your history is empty, after you will send some messages, here you will see history!</string>
</resources>
