<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/delayTimeTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/delay_time" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/date" />

    </LinearLayout>
</LinearLayout>